Refactoring Vector Storage